XRT-2128 Remove Subdirectory for app_component

--- a/ApplicationComponent/deployment/config/app_component.json
+++ b/ApplicationComponent/deployment/config/app_component.json
@@ -1,5 +1,5 @@
 {
-  "Library": "app-component/libapp-component.so",
+  "Library": "./libapp-component.so",
   "Factory": "app_component_factory",
   "Name": "ApplicationComponent",
   "Bus": "bus",
