XRT-2268: Config profile update and node red flows update

--- a/Tutorials/ChemicalTank/docker-compose.yml
+++ b/Tutorials/ChemicalTank/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     volumes:
       # use host timezone
       - /etc/localtime:/etc/localtime:ro
-      #- nodered-data:/data
+      - ./nodered-data/:/data
 
   grafana:
     image: grafana/grafana:8.5.13
