--- a/Tutorials/ChemicalTank/scripts/env-file.env
+++ b/Tutorials/ChemicalTank/scripts/env-file.env
@@ -9,7 +9,7 @@ export MODBUS_SIM_PORT=1502
 
 export XRT_S7_PROFILE_DIR=/opt/iotech/xrt/2.2/deployment/s7-profiles
 export XRT_S7_STATE_DIR=/opt/iotech/xrt/2.2/deployment/s7-state
-export S7_SIM_ADDRESS="0.0.0.0"
+export S7_SIM_ADDRESS="10.5.0.5"
 
 export XRT_LICENSE_FILE=/license.json
 
@@ -18,3 +18,4 @@ export XRT_INFLUXDB_USERNAME=admin
 export XRT_INFLUXDB_PASSWORD=admin-password
 export XRT_INFLUXDB_BUCKET=demo_bucket
 export XRT_INFLUXDB_TOKEN="abcede=="
+export XRT_INFLUXDB_ORG="IOTech"
