--- a/Tutorials/ChemicalTank/scripts/env-file.env
+++ b/Tutorials/ChemicalTank/scripts/env-file.env
@@ -2,13 +2,13 @@ export XRT_MQTT_BROKER=tcp://mqtt-broker:1883
 export XRT_MQTT_USERNAME=""
 export XRT_MQTT_PASSWORD=""
 
-export XRT_MODBUS_TCP_PROFILE_DIR=/opt/iotech/xrt/2.2/deployment/modbus-profiles
-export XRT_MODBUS_TCP_STATE_DIR=/opt/iotech/xrt/2.2/deployment/modbus-state
-export MODBUS_SIM_ADDRESS=modbus-sim
+export XRT_MODBUS_TCP_PROFILE_DIR=/opt/iotech/xrt/2.1/deployment/modbus-profiles
+export XRT_MODBUS_TCP_STATE_DIR=/opt/iotech/xrt/2.1/deployment/modbus-state
+export MODBUS_SIM_ADDRESS="172.17.0.1"
 export MODBUS_SIM_PORT=1502
 
-export XRT_S7_PROFILE_DIR=/opt/iotech/xrt/2.2/deployment/s7-profiles
-export XRT_S7_STATE_DIR=/opt/iotech/xrt/2.2/deployment/s7-state
+export XRT_S7_PROFILE_DIR=/opt/iotech/xrt/2.1/deployment/s7-profiles
+export XRT_S7_STATE_DIR=/opt/iotech/xrt/2.1/deployment/s7-state
 export S7_SIM_ADDRESS="10.5.0.5"
 
 export XRT_LICENSE_FILE=/license.json
@@ -19,3 +19,5 @@ export XRT_INFLUXDB_PASSWORD=admin-password
 export XRT_INFLUXDB_BUCKET=demo_bucket
 export XRT_INFLUXDB_TOKEN="abcede=="
 export XRT_INFLUXDB_ORG="IOTech"
+
+export XRT_SERVER_ID=XrtChemicalTankInstance
