XRT-2858: update example with mapping

--- a/Servers/opc-ua/federated/opc-ua/deployment/config/opc_ua_server_config.json
+++ b/Servers/opc-ua/federated/opc-ua/deployment/config/opc_ua_server_config.json
@@ -1,7 +1,7 @@
 {
   "Port": 4840,
-  "ModelPaths": [
-    "${XRT_MODELS_DIR}/Sunspec_Model805.json"
+  "MappingPaths": [
+    "${XRT_MAPPING_DIR}/Sunspec_Model805.json"
   ],
   "NodesetPaths": [
     "${XRT_NODESET_DIR}/Sunspec.Model805.xml"
