--- a/Servers/opc-ua/node-modeller/deployment/config/opc_ua_server_config.json
+++ b/Servers/opc-ua/node-modeller/deployment/config/opc_ua_server_config.json
@@ -1,11 +1,12 @@
 {
   "Port": 4840,
-  "ModelPaths": [
-    "${XRT_MODELS_DIR}/euromap_model.json"
-  ],
   "NodesetPaths": [
     "${XRT_NODESET_DIR}/Opc.Ua.Di.NodeSet2.xml",
     "${XRT_NODESET_DIR}/Opc.Ua.PlasticsRubber.GeneralTypes.NodeSet2.xml",
-    "${XRT_NODESET_DIR}/Opc.Ua.PlasticsRubber.IMM2MES.NodeSet2.xml"
+    "${XRT_NODESET_DIR}/Opc.Ua.PlasticsRubber.IMM2MES.NodeSet2.xml",
+    "${XRT_NODESET_DIR}/CustomNodeset.xml"
+  ],
+  "MappingPaths" : [
+    "${XRT_MAPPING_DIR}/euromap_mapping.json"
   ]
 }
