--- a/Servers/opc-ua/federated/opc-ua/deployment/config/opc_ua_server_config.json
+++ b/Servers/opc-ua/federated/opc-ua/deployment/config/opc_ua_server_config.json
@@ -4,6 +4,7 @@
     "${XRT_MAPPING_DIR}/Sunspec_Model805.json"
   ],
   "NodesetPaths": [
-    "${XRT_NODESET_DIR}/Sunspec.Model805.xml"
+    "${XRT_NODESET_DIR}/Sunspec.Model805.xml",
+    "${XRT_NODESET_DIR}/custom_nodeset.xml"
   ]
 }
